2012-05-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Merged from 4.0 the extra_sql
	get code

2012-05-09  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_alert_macros.php
	include/help/es/help_alert_macros.php
	include/functions.php
	include/functions_agents.php: Fixing some missing or wrong macros
	into help and added Minor and Major severities to alerts 
	and clean some code

2012-05-08  Sancho Lerena <slerena@artica.es>

        * operation/agentes/datos_agente.php: Fixed search, was 
        not working due html encoding in the SQL. Alter some layout
        issues (centering data in columns)

	* extensions/ssh_gateway*: New extension to connect SSH/Telnet
	servers from the console, using external anytermd daemon running
	in the pandora server.

	* pandora.css: Fix title height.

2012-05-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/header_f2b.png: Changed image size to 3000px width.

2012-05-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/opera_browser.png
	 images/safari_browser.jpeg
	 images/iexplorer.jpeg: Added browser images.

	* general/login_page.php: Changed browser warning modal window.

	* images/mozilla_firefox.png: Modified image.

2012-05-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Reverted changes (bag visualization
	in Firefox).

2012-05-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Fixed input layout in login screen.

2012-05-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/ver_agente.php: Changed way of truncate agent 
	name in header due to bad visualization if agent name has entities.
		
	* include/styles/pandora.css
	images/header_f2.png: Modified header image with 3000px width. 

2012-05-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/pandora.css: fixed ".is_submenu2 li" because there
	is not ":".
	