@@ -1,3 +1,9 @@
+2012-05-10  Sergio Martin <sergio.martin@artica.es>
+
+	* include/help/en/help_alert_macros.php
+	include/help/es/help_alert_macros.php: Added to help two new
+	macros
+
 2012-05-09  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_agents.php: Merged from 4.0 the extra_sql
